lustre/llite/llite_lib.c
@@ -1911,8 +1911,14 @@ int ll_update_inode(struct inode *inode, struct lustre_md *md)
 	}
 
 	if (body->mbo_valid & OBD_MD_TSTATE) {
+		/* Set LLIF_FILE_RESTORING if restore ongoing and
+		 * clear it when done to ensure to start again
+		 * glimpsing updated attrs
+		 */
 		if (body->mbo_t_state & MS_RESTORE)
 			ll_file_set_flag(lli, LLIF_FILE_RESTORING);
+		else
+			ll_file_clear_flag(lli, LLIF_FILE_RESTORING);
 	}
 
 	return 0;
