lustre/mdt/mdt_handler.c
@@ -897,10 +897,11 @@ static int mdt_getattr_internal(struct mdt_thread_info *info,
 	}
 
 	/* if file is released, check if a restore is running */
-	if ((ma->ma_valid & MA_HSM) && (ma->ma_hsm.mh_flags & HS_RELEASED) &&
-	    mdt_hsm_restore_is_running(info, mdt_object_fid(o))) {
-		repbody->mbo_t_state = MS_RESTORE;
+	if (ma->ma_valid & MA_HSM) {
 		repbody->mbo_valid |= OBD_MD_TSTATE;
+		if ((ma->ma_hsm.mh_flags & HS_RELEASED) &&
+		    mdt_hsm_restore_is_running(info, mdt_object_fid(o)))
+			repbody->mbo_t_state = MS_RESTORE;
 	}
 
 	is_root = lu_fid_eq(mdt_object_fid(o), &info->mti_mdt->mdt_md_root_fid);
