lustre/tests/cfg/local.sh
@@ -112,6 +112,7 @@ LQUOTAOPTS=${LQUOTAOPTS:-"hash_lqs_cur_bits=3"}
 MOUNT=${MOUNT:-/mnt/${FSNAME}}
 MOUNT1=${MOUNT1:-$MOUNT}
 MOUNT2=${MOUNT2:-${MOUNT}2}
+MOUNT3=${MOUNT3:-${MOUNT}3}
 # Comma-separated option list used as "mount [...] -o $MOUNT_OPTS [...]"
 MOUNT_OPTS=${MOUNT_OPTS:-"user_xattr,flock"}
 # Mount flags (e.g. "-n") used as "mount [...] $MOUNT_FLAGS [...]"
@@ -119,6 +120,7 @@ MOUNT_FLAGS=${MOUNT_FLAGS:-""}
 DIR=${DIR:-$MOUNT}
 DIR1=${DIR:-$MOUNT1}
 DIR2=${DIR2:-$MOUNT2}
+DIR3=${DIR3:-$MOUNT3}
 
 if [ $UID -ne 0 ]; then
         log "running as non-root uid $UID"
